--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,10 +7,10 @@
   android:orientation="vertical" >
 
   <TextView
+    android:id="@+id/question_text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="24dp"
-    android:text="@string/question_text" />
+    android:padding="24dp" />
 
   <LinearLayout
     android:layout_width="wrap_content"
@@ -29,14 +29,22 @@
       android:layout_height="wrap_content"
       android:text="@string/false_button" />
 
-
-
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintRight_toRightOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent">-->
-
-
   </LinearLayout>
+
+  <Button
+    android:id="@+id/previous_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/previous_button"
+android:drawableLeft="@drawable/arrow_left"
+    android:drawablePadding="4dp" />
+
+  <Button
+    android:id="@+id/next_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/next_button"
+    android:drawableRight="@drawable/arrow_right"
+    android:drawablePadding="4dp" />
 
 </LinearLayout>
